--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,3 +1,5 @@
+# See https://docs.ansible.com/ansible/latest/dev_guide/collections_galaxy_meta.html
+
 namespace: community
 name: FIXME
 version: 0.1.0
@@ -7,14 +9,15 @@ authors:
 description: null
 license_file: COPYING
 tags:
-  - acme
-  - certificate
-  - community
+# tags so people can search for collections https://galaxy.ansible.com/search
+# tags are all lower-case, no spaces, no dashes.
+  - example1
+  - example2
 repository: https://github.com/ansible-collections/community.REPO_NAME
 #documentation: https://github.com/ansible-collection-migration/community.REPO_NAME/tree/main/docs
 homepage: https://github.com/ansible-collections/community.REPO_NAME
 issues: https://github.com/ansible-collections/community.REPO_NAME/issues
 build_ignore:
-  - 'community-*-*.tar.gz'
+# https://docs.ansible.com/ansible/devel/dev_guide/developing_collections.html#ignoring-files-and-folders
   - .gitignore
   - changelogs/.plugin-cache.yaml
