fail-fast Sanity tests

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -69,7 +69,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Units (Ⓐ${{ matrix.ansible }}+py${{ matrix.python }})
     strategy:
-      fail-fast: false
+      # As soon as the first unit test fails, cancel the others to free up the CI queue
+      fail-fast: true
       matrix:
         ansible:
           # - stable-2.9 # Only if your collection supports Ansible 2.9
