--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -73,11 +73,16 @@ jobs:
           - stable-2.10
           - devel
         python:
+          - 2.6
           - 2.7
+          - 3.5
+          - 3.6
           - 3.7
           - 3.8
+          - 3.9
         exclude:
-          - python: 3.8  # blocked by ansible/ansible#70155
+          - ansible: stable-2.9
+            python: 3.9
 
     steps:
       - name: Check out code
@@ -134,11 +139,16 @@ jobs:
           - stable-2.10
           - devel
         python:
+          - 2.6
           - 2.7
+          - 3.5
+          - 3.6
           - 3.7
           - 3.8
+          - 3.9
         exclude:
-          - python: 3.8  # blocked by ansible/ansible#70155
+          - ansible: stable-2.9
+            python: 3.9
 
     steps:
       - name: Check out code
