--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -109,7 +109,9 @@ jobs:
       # OPTIONAL If your unit test requires Python libraries from other collections
       # Install them like this
       - name: Install collection dependencies
-        run: ansible-galaxy collection install ansible.netcommon -p .
+        run: |
+          ansible-galaxy collection install ansible.netcommon -p .
+          ansible-galaxy collection install ansible.utils -p .
 
       # Run the unit tests
       - name: Run unit test
@@ -177,7 +179,8 @@ jobs:
       # OPTIONAL If your integration test requires Python libraries or modules from other collections
       # Install them like this
       - name: Install collection dependencies
-        run: ansible-galaxy collection install ansible.netcommon -p .
+        run: |
+          ansible-galaxy collection install ansible.netcommon -p .
 
       # Run the integration tests
       - name: Run integration test
