--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -69,7 +69,7 @@ jobs:
 
   units:
     runs-on: ubuntu-latest
-    name: Units (Ⓐ${{ matrix.ansible }}+py${{ matrix.python }})
+    name: Units (Ⓐ${{ matrix.ansible }})
     strategy:
       # As soon as the first unit test fails, cancel the others to free up the CI queue
       fail-fast: true
@@ -78,17 +78,6 @@ jobs:
           # - stable-2.9 # Only if your collection supports Ansible 2.9
           - stable-2.10
           - devel
-        python:
-          - 2.6
-          - 2.7
-          - 3.5
-          - 3.6
-          - 3.7
-          - 3.8
-          - 3.9
-        exclude:
-          - ansible: stable-2.9
-            python: 3.9
 
     steps:
       - name: Check out code
@@ -96,7 +85,7 @@ jobs:
         with:
           path: ansible_collections/${{env.NAMESPACE}}/${{env.COLLECTION_NAME}}
 
-      - name: Set up Python ${{ matrix.ansible }}
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           # it is just required to run that once as "ansible-test units" in the docker image
@@ -109,11 +98,11 @@ jobs:
       # OPTIONAL If your unit test requires Python libraries from other collections
       # Install them like this
       - name: Install collection dependencies
-        run: ansible-galaxy collection install ansible.netcommon -p .
+        run: ansible-galaxy collection install ansible.netcommon ansible.utils -p .
 
       # Run the unit tests
       - name: Run unit test
-        run: ansible-test units -v --color --python ${{ matrix.python }} --docker --coverage
+        run: ansible-test units -v --color --docker --coverage
         working-directory: ./ansible_collections/${{env.NAMESPACE}}/${{env.COLLECTION_NAME}}
 
         # ansible-test support producing code coverage date
@@ -164,7 +153,7 @@ jobs:
         with:
           path: ansible_collections/${{env.NAMESPACE}}/${{env.COLLECTION_NAME}}
 
-      - name: Set up Python ${{ matrix.ansible }}
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           # it is just required to run that once as "ansible-test integration" in the docker image
