--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -9,9 +9,10 @@ on:
   # Run CI against all pushes (direct commits, also merged PRs), Pull Requests
   push:
   pull_request:
-  # Uncomment the following two lines to run CI once per day (at 06:00 UTC)
-  # schedule:
-  #   - cron: '0 6 * * *'
+  # Run CI once per day (at 06:00 UTC)
+  # This ensures that even if there haven't been commits that we are still testing against latest version of ansible-test for each ansible-base version
+  schedule:
+    - cron: '0 6 * * *'
 env:
   NAMESPACE: NAMESPACE
   COLLECTION_NAME: COLLECTION_NAME 
