--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -2,7 +2,7 @@
 # 1. replace "NAMESPACE" and "COLLECTION_NAME" with the correct name in the env section (e.g. with 'community' and 'mycollection')
 # 2. If you don't have unit tests remove that section
 # 3. If your collection depends on other collections ensure they are installed, see "Install collection dependencies"
-# If you need help please ask in #ansible-devel on Freenode IRC
+# If you need help please ask in #ansible-community on the Libera.chat IRC network
 
 name: CI
 on:
