Make GHA workflow placeholders more prominent

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -14,8 +14,8 @@ on:
   schedule:
     - cron: '0 6 * * *'
 env:
-  NAMESPACE: NAMESPACE
-  COLLECTION_NAME: COLLECTION_NAME 
+  NAMESPACE: NAMESPACE  <-- CHANGE THIS!
+  COLLECTION_NAME: COLLECTION_NAME   <-- CHANGE THIS!
 
 jobs:
 
