--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -156,17 +156,26 @@ jobs:
           - stable-2.12
           - devel
         python:
-          - 2.6
-          - 2.7
-          - 3.5
-          - 3.6
-          - 3.7
-          - 3.8
-          - 3.9
+          - '2.6'
+          - '2.7'
+          - '3.5'
+          - '3.6'
+          - '3.7'
+          - '3.8'
+          - '3.9'
+          - '3.10'
         exclude:
-          # Because ansible-test doesn't support python3.9 for Ansible 2.9
+          # Because ansible-test doesn't support python 3.9 for Ansible 2.9
+          # and Python 10 is supported in 2.12 or later.
           - ansible: stable-2.9
-            python: 3.9
+            python: '3.9'
+          - ansible: stable-2.9
+            python: '3.10'
+          - ansible: stable-2.10
+            python: '3.10'
+          - ansible: stable-2.11
+            python: '3.10'
+            
 
     steps:
       - name: Check out code
