--- a/.github/workflows/extra-docs-linting.yml
+++ b/.github/workflows/extra-docs-linting.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   docsite:
     name: Lint extra docsite docs and links
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     steps:
 
