Install antsibull-docs instead of antsibull.

--- a/.github/workflows/extra-docs-linting.yml
+++ b/.github/workflows/extra-docs-linting.yml
@@ -27,8 +27,8 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install antsibull
-        run: pip install antsibull --disable-pip-version-check
+      - name: Install antsibull-docs
+        run: pip install antsibull-docs --disable-pip-version-check
 
       - name: Run collection docs linter
         run: antsibull-docs lint-collection-docs .
