Integrate `stable-2.13` and `milestone` in GHA

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -37,11 +37,16 @@ jobs:
         ansible:
           # It's important that Sanity is tested against all stable-X.Y branches
           # Testing against `devel` may fail as new tests are added.
+          # An alternative to `devel` is the `milestone` branch with
+          # gets synchronized with `devel` every few weeks and therefore
+          # is a more stable target.
         # - stable-2.9 # Only if your collection supports Ansible 2.9
           - stable-2.10
           - stable-2.11
           - stable-2.12
-          - devel
+          - stable-2.13
+        # - devel # Only if you prefer bleeding-edge instability
+          - milestone
     runs-on: ubuntu-latest
     steps:
       # Run sanity tests inside a Docker container.
@@ -75,7 +80,9 @@ jobs:
           - stable-2.10
           - stable-2.11
           - stable-2.12
-          - devel
+          - stable-2.13
+        # - devel # Only if you prefer bleeding-edge instability
+          - milestone
 
     steps:
       - name: >-
@@ -112,7 +119,9 @@ jobs:
           - stable-2.10
           - stable-2.11
           - stable-2.12
-          - devel
+          - stable-2.13
+        # - devel # Only if you prefer bleeding-edge instability
+          - milestone
         python:
           - '2.6'
           - '2.7'
