Partially revert "Integrate `stable-2.13` and `milestone` in GHA"
This reverts commit ef99b1b848d0e860f373992a25e16208d9a24999.

Well, only a part of it that adds the `milestone` branch...

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -37,16 +37,12 @@ jobs:
         ansible:
           # It's important that Sanity is tested against all stable-X.Y branches
           # Testing against `devel` may fail as new tests are added.
-          # An alternative to `devel` is the `milestone` branch with
-          # gets synchronized with `devel` every few weeks and therefore
-          # is a more stable target.
         # - stable-2.9 # Only if your collection supports Ansible 2.9
           - stable-2.10
           - stable-2.11
           - stable-2.12
           - stable-2.13
-        # - devel # Only if you prefer bleeding-edge instability
-          - milestone
+          - devel
     runs-on: ubuntu-latest
     steps:
       # Run sanity tests inside a Docker container.
@@ -81,8 +77,7 @@ jobs:
           - stable-2.11
           - stable-2.12
           - stable-2.13
-        # - devel # Only if you prefer bleeding-edge instability
-          - milestone
+          - devel
 
     steps:
       - name: >-
@@ -120,8 +115,7 @@ jobs:
           - stable-2.11
           - stable-2.12
           - stable-2.13
-        # - devel # Only if you prefer bleeding-edge instability
-          - milestone
+          - devel
         python:
           - '2.6'
           - '2.7'
