Integrate `stable-2.13` in GHA (#47)
* Integrate `stable-2.13` and `milestone` in GHA

* Partially revert "Integrate `stable-2.13` and `milestone` in GHA"

This reverts commit ef99b1b848d0e860f373992a25e16208d9a24999.

Well, only a part of it that adds the `milestone` branch...

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -41,6 +41,7 @@ jobs:
           - stable-2.10
           - stable-2.11
           - stable-2.12
+          - stable-2.13
           - devel
     runs-on: ubuntu-latest
     steps:
@@ -75,6 +76,7 @@ jobs:
           - stable-2.10
           - stable-2.11
           - stable-2.12
+          - stable-2.13
           - devel
 
     steps:
@@ -112,6 +114,7 @@ jobs:
           - stable-2.10
           - stable-2.11
           - stable-2.12
+          - stable-2.13
           - devel
         python:
           - '2.6'
