--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -37,12 +37,16 @@ jobs:
         ansible:
           # It's important that Sanity is tested against all stable-X.Y branches
           # Testing against `devel` may fail as new tests are added.
+          # An alternative to `devel` is the `milestone` branch with
+          # gets synchronized with `devel` every few weeks and therefore
+          # is a more stable target.
         # - stable-2.9 # Only if your collection supports Ansible 2.9
           - stable-2.10
           - stable-2.11
           - stable-2.12
           - stable-2.13
-          - devel
+        # - devel # Only if you prefer bleeding-edge instability
+          - milestone
     runs-on: ubuntu-latest
     steps:
       # Run sanity tests inside a Docker container.
@@ -77,7 +81,8 @@ jobs:
           - stable-2.11
           - stable-2.12
           - stable-2.13
-          - devel
+        # - devel # Only if you prefer bleeding-edge instability
+          - milestone
 
     steps:
       - name: >-
@@ -115,7 +120,8 @@ jobs:
           - stable-2.11
           - stable-2.12
           - stable-2.13
-          - devel
+        # - devel # Only if you prefer bleeding-edge instability
+          - milestone
         python:
           - '2.6'
           - '2.7'
