Keep the `milestone` branch commented out

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -39,14 +39,14 @@ jobs:
           # Testing against `devel` may fail as new tests are added.
           # An alternative to `devel` is the `milestone` branch with
           # gets synchronized with `devel` every few weeks and therefore
-          # is a more stable target.
+          # tends to be a more stable target.
         # - stable-2.9 # Only if your collection supports Ansible 2.9
           - stable-2.10
           - stable-2.11
           - stable-2.12
           - stable-2.13
-        # - devel # Only if you prefer bleeding-edge instability
-          - milestone
+          - devel
+        # - milestone
     runs-on: ubuntu-latest
     steps:
       # Run sanity tests inside a Docker container.
@@ -81,8 +81,8 @@ jobs:
           - stable-2.11
           - stable-2.12
           - stable-2.13
-        # - devel # Only if you prefer bleeding-edge instability
-          - milestone
+          - devel
+        # - milestone
 
     steps:
       - name: >-
@@ -120,8 +120,8 @@ jobs:
           - stable-2.11
           - stable-2.12
           - stable-2.13
-        # - devel # Only if you prefer bleeding-edge instability
-          - milestone
+          - devel
+        # - milestone
         python:
           - '2.6'
           - '2.7'
