Explain that the `check` job can be used for multistage
Co-authored-by: Felix Fontein <felix@fontein.de>

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -173,6 +173,8 @@ jobs:
 
 
   check:  # This job does nothing and is only used for the branch protection
+          # or multi-stage CI jobs, like making sure that all tests pass before
+          # a publishing job is started.
     if: always()
 
     needs:
